<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/movie"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/world_cinema"
        android:textColor="@color/title_color"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/edLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/edittext" />
        <EditText
            android:id="@+id/edPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/edittext" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext"
            android:text="@string/registration"
            android:textColor="@color/buttons_color"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>